// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`e2e renders with root provider and updates on action dispatch 1`] = `
<body>
  <div>
    <div>
      Count: 
      <span>
        2
      </span>
      <button>
        increment
      </button>
    </div>
  </div>
</body>
`;

exports[`e2e renders without root provider 1`] = `
<body>
  <div>
    <div>
      Count: 
      <span>
        0
      </span>
      <button
        disabled=""
      >
        increment
      </button>
    </div>
  </div>
</body>
`;
